--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
+.App{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: rgb(27, 27, 30);
+  margin-top: 80px;
+  font-family: "Times New Roman", Times, serif;
+  font-style: italic;
+  font-size: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 250px;
+  height: 400px;
+  border: 5px solid #111;
+  border-radius: 10px;
+  margin-top: 200px;
+  background-color: #090909;
+  padding: 20px;
+}
+
+ h1 {
+  position: absolute;
+  top: 0px;
+} 
+
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
+}
+
+input[type="text"] {
+  width: 250px;
+  height: 60px;
+  border-radius: 5px;
+  background: rgb(135, 130, 130);
+  color: #fff;
+  border: none;
+  text-align: right;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+#clear {
+  grid-column: 1/3;
+}
+
+#equal {
+  grid-column: 3/5;
+}
+
+button {
+  margin: 5px;
+  border-radius: 5px;
+  background-color: #777;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.highlight {
+  background-color: rgba(239, 155, 53, 0.782);
 }
